// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly accepts the credentials cleans any error presented 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": 20,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#404040",
        "fontFamily": "cursive",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginBottom": 25,
      }
    }
  >
     Food Recipes 
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="d"
  />
  <Text
    testID="error"
  >
     
    The password needs to have at least 6 chars
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": 15,
        "marginHorizontal": 10,
        "padding": 20,
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "marginHorizontal": 20,
        "marginTop": 7,
        "padding": 5,
      }
    }
    testID="signupButton"
  >
    <Text
      style={
        Object {
          "color": "#EA1D2C",
          "fontSize": 16,
          "textAlign": "center",
          "textDecorationLine": "underline",
        }
      }
    >
      Sign Up
    </Text>
  </View>
</View>
`;

exports[`correctly accepts the credentials cleans any error presented 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": 20,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#404040",
        "fontFamily": "cursive",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginBottom": 25,
      }
    }
  >
     Food Recipes 
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="d"
  />
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": 15,
        "marginHorizontal": 10,
        "padding": 20,
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "marginHorizontal": 20,
        "marginTop": 7,
        "padding": 5,
      }
    }
    testID="signupButton"
  >
    <Text
      style={
        Object {
          "color": "#EA1D2C",
          "fontSize": 16,
          "textAlign": "center",
          "textDecorationLine": "underline",
        }
      }
    >
      Sign Up
    </Text>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": 20,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#404040",
        "fontFamily": "cursive",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginBottom": 25,
      }
    }
  >
     Food Recipes 
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": 15,
        "marginHorizontal": 10,
        "padding": 20,
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "marginHorizontal": 20,
        "marginTop": 7,
        "padding": 5,
      }
    }
    testID="signupButton"
  >
    <Text
      style={
        Object {
          "color": "#EA1D2C",
          "fontSize": 16,
          "textAlign": "center",
          "textDecorationLine": "underline",
        }
      }
    >
      Sign Up
    </Text>
  </View>
</View>
`;

exports[`tries to log in the user too short password was inserted 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": 20,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#404040",
        "fontFamily": "cursive",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginBottom": 25,
      }
    }
  >
     Food Recipes 
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    placeholder="password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EA1D2C",
        "borderRadius": 5,
        "borderWidth": 1,
        "fontSize": 16,
        "marginBottom": 15,
        "marginHorizontal": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="d"
  />
  <Text
    testID="error"
  >
     
    The password needs to have at least 6 chars
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": 15,
        "marginHorizontal": 10,
        "padding": 20,
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "marginHorizontal": 20,
        "marginTop": 7,
        "padding": 5,
      }
    }
    testID="signupButton"
  >
    <Text
      style={
        Object {
          "color": "#EA1D2C",
          "fontSize": 16,
          "textAlign": "center",
          "textDecorationLine": "underline",
        }
      }
    >
      Sign Up
    </Text>
  </View>
</View>
`;
